# jobscout

./: .gitignore  README.md  pyproject.toml
scripts/: capture_html.py
src/jobscout/: __main__.py  auth.py  cli.py  config.py  db.py  models.py
src/jobscout/sites/: base.py  jobsdb.py  zhipin.py
tests/: test_db.py  test_zhipin_parser.py
